Bug 222837 - truss doesn't mention -H when printing basic usage
Summary: truss doesn't mention -H when printing basic usage
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 11.1-STABLE
Hardware: Any Any
: --- Affects Only Me
Assignee: Ed Maste
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2017-10-06 19:48 UTC by Oliver Kiddle
Modified: 2017-10-20 00:34 UTC (History)
1 user (show)

See Also:
emaste: mfc-stable11+
emaste: mfc-stable10+


Attachments
Patch to include -H in truss usage synopsis (513 bytes, patch)
2017-10-06 19:48 UTC, Oliver Kiddle
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Kiddle 2017-10-06 19:48:17 UTC
Created attachment 186965 [details]
Patch to include -H in truss usage synopsis

If truss is run without arguments, it prints a short usage synopsis. This omits the -H option that was a relatively recent addition. Instead of
    usage: truss [-cfaedDS] [-o file] [-s strsize] ...
It should say:
    usage: truss [-cfaedDHS] [-o file] [-s strsize] ...

I have attached a patch for what it's worth.
Comment 1 commit-hook freebsd_committer freebsd_triage 2017-10-13 13:48:25 UTC
A commit references this bug:

Author: emaste
Date: Fri Oct 13 13:47:55 UTC 2017
New revision: 324594
URL: https://svnweb.freebsd.org/changeset/base/324594

Log:
  truss: mention 'H' in usage

  r295930 introduced the 'H' option to display thread IDs, but did not add
  the option to usage().

  PR:		222837
  Submitted by:	Oliver Kiddle <okiddle@yahoo.co.uk>
  MFC after:	1 week

Changes:
  head/usr.bin/truss/main.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2017-10-20 00:29:58 UTC
A commit references this bug:

Author: emaste
Date: Fri Oct 20 00:29:39 UTC 2017
New revision: 324777
URL: https://svnweb.freebsd.org/changeset/base/324777

Log:
  MFC r324594: truss: mention 'H' in usage

  r295930 (MFC of r295930) introduced the 'H' option to display thread
  IDs, but did not add the option to usage().

  PR:		222837
  Submitted by:	Oliver Kiddle <okiddle@yahoo.co.uk>

Changes:
_U  stable/11/
  stable/11/usr.bin/truss/main.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2017-10-20 00:34:04 UTC
A commit references this bug:

Author: emaste
Date: Fri Oct 20 00:33:49 UTC 2017
New revision: 324779
URL: https://svnweb.freebsd.org/changeset/base/324779

Log:
  MFC r324594: truss: mention 'H' in usage

  r298427 (MFC of r295930) introduced the 'H' option to display thread
  IDs, but did not add the option to usage().

  PR:		222837
  Submitted by:	Oliver Kiddle <okiddle@yahoo.co.uk>

Changes:
_U  stable/10/
  stable/10/usr.bin/truss/main.c