MFC r324594: truss: mention 'H' in usage

r298427 (MFC of r295930) introduced the 'H' option to display thread
IDs, but did not add the option to usage().

PR:		222837
Submitted by:	Oliver Kiddle <okiddle@yahoo.co.uk>